[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "mypackage"
version = "0.1.0"
description = "My first package"
dependencies = [
  "httpx",
  "gidgethub>4.0.0",
  "numpy>=2.3.0",
]
license = {file = "MITlicense.txt"}


[project.optional-dependencies]
dev = [
  "bumpver",
  "pytest",
  "pytest-cov",
]
docs = [
  "sphinx",
  "sphinx-rtd-theme",
]